# demo-app-cups-manager

./: Cargo.toml
config/: dev.toml
src/: cup.rs  main.rs  migrations.rs  qr.rs
src/migrations/: m_0001_initial.rs
templates/: create_cup.html  get_cup.html  scan_cup.html
